--- a/style.css
+++ b/style.css
@@ -6,11 +6,10 @@ html {
     }
 
 body {
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: white;
+    color: #BED7C5;
 }
 
 nav ul {
@@ -18,43 +17,112 @@ nav ul {
     padding: 0;
     background-color: #333;
     text-align: center;
+    margin: 0;
 }
 
 nav li {
     display: inline;
     padding: 10px;
+    text-align: center;
+    
 }
 
 nav a {
     color: white;
     text-decoration: none;
     font-family: PP Object Sans;
-    
+    text-align: center;
 }
 
-h1 {
+.photo-gallery img {
+    margin: 20px;
+    width: 40%;
+    height: 40%x;    
+    margin-left: 3%;
+    margin-right: 3%;
+}
+
+
+.text {
+    font-family: PP Object Sans;
+    margin-left: 3%;
+    margin-right: 3%;
+} 
+
+.H {
+    font-family: PP Object Sans;
     font-size: 24px;
     margin-top: 20px;
     text-align: center;
 }
 
-.photo-gallery {
+.VK {
+    color: white;
+    font-size: 50px;
+    text-decoration: none;
+    background: #4C75A3;
+   margin: 10%;
+   border-radius: 50px
+}
+
+.Telegram {
+    color: white;
+    background: #0088CC;
+    font-size: 50px ;
+    margin: 10%;
+    border-radius: 50px
+}
+.text-contacts {
+    font-family: PP Object Sans;
+    text-align: center;
+}
+
+.Discord {
+    font-size: 50px;
+    margin: 10%;
+    background: #7289da;
+    color: white;
+    border-radius: 50px
+}
+
+.Tt {
+    font-size: 50px;
+    margin: 10%;
+    border-radius: 50px
+}
+
+.RAZRAB {
+    text-align: right;
+    margin-right: 0.5%;
+}
+
+.burger {
+    width: 40px;
+    height: 40px;
+    background: none;
+    border: none;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 15px;
+    margin-top: 15px;
+}
+
+.burger span {
+    height: 4px;
+    width: 100%;
+    background: #BED7C5;
+    border-radius: 15px;
+}
+
+.list {
+    display: inline;
+}
+@media (max-width: 768px) {
+.burger {
     display: flex;
-    flex-wrap: wrap;
 }
-
-.photo-gallery img {
-    margin: 50px;
-    width: 400px;
-    height: 400px;
+.list {
+    display: none;
 }
-
-
-.text {
-    margin-left: 150px;
-    font-family: PP Object Sans;
-} 
-
-.H {
-    font-family: PP Object Sans;
 }
