--- a/style.css
+++ b/style.css
@@ -12,26 +12,21 @@ body {
     color: #BED7C5;
 }
 
-nav ul {
-    list-style-type: none;
-    padding: 0;
-    background-color: #333;
-    text-align: center;
-    margin: 0;
+.nav-list {
+    display: flex;
+   list-style: none;
+   background: #003153;
+   margin-top: 0;
+   display: flex;
+  justify-content: center;
+  gap: 60px;
+  
 }
 
-nav li {
-    display: inline;
-    padding: 10px;
-    text-align: center;
-    
-}
-
-nav a {
-    color: white;
+.nav-link {
     text-decoration: none;
-    font-family: PP Object Sans;
-    text-align: center;
+    color: #BED7C5;
+    font-size: 15px;
 }
 
 .photo-gallery img {
@@ -104,25 +99,41 @@ nav a {
     display: none;
     flex-direction: column;
     justify-content: space-between;
-    margin-left: 15px;
+    position: relative;
+    margin-left: 90%;
     margin-top: 15px;
+    z-index: 20; 
 }
 
 .burger span {
     height: 4px;
-    width: 100%;
+    width: 20%;
     background: #BED7C5;
     border-radius: 15px;
 }
 
-.list {
-    display: inline;
-}
 @media (max-width: 768px) {
-.burger {
-    display: flex;
-}
-.list {
-    display: none;
-}
+
+    .nav{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 70%;
+        height: 100%;
+        background:  #003153;
+        z-index: 10;
+        padding: 20px 15px;
+        transform: translateX(-100%);
+        transition: all 0.9s ease 0s;
+     }
+     .nav.clicked{
+        transform: translateX(0);
+     }
+     .nav-list{
+        flex-direction: column;
+        gap: 30px;
+     }
+
+    .burger{
+         display: flex;
 }
