--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ body {
 .burger span {
     height: 4px;
     width: 20%;
-    background: #BED7C5;
+    background: white;
     border-radius: 15px;
 }
 
